--- a/index.html
+++ b/index.html
@@ -6,7 +6,47 @@
     <link href="resources/css/reset.css" type="text.css" rel="stylesheet">
     <link href="resources/css/style.css" type="text.css" rel="stylesheet">
   </head>
+
   <body>
+
+<!-- Header -->
+<header>
+  <div class="container">
+    <div class="logo">
+      <img src="./resources.images.ic-logo.svg" alt="Colmar Logo">
+      <h4><em>COLMAR</em>ACADEMY</h4>
+    </div>
+    <nav class="desktop">
+      <ul>
+        <li><a href="#">On Campus</a></li>
+        <li><a href="#">Online</a></li>
+        <li><a href="#">For Companies</a></li>
+        <li><a href="#"> Sign In</a></li>
+      </ul>
+    </nav>
+
+    <!-- Add in nav for mobile -->
+  </div>
+</header>
+
+<!--Learn section -->
+<div class="container">
+  <div class="learn">
+    <div class="banner">
+      <img src="resources/images/banner.jpg" alt="Students studying together">
+    </div>
+
+  <div class="rightside">
+    <h1>Learn something new everyday</h1>
+    <h3>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</h3>
+    <span class="button"><a href="#">Start Here</a></span>
+  </div>
+</div>
+</div>
+
+
+
+
 
   </body>
 </html>
