info section added html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 </header>
 
-<!--Learn section -->
+<!-- Learn section -->
 <div class="container">
   <div class="learn">
     <div class="banner">
@@ -43,6 +43,51 @@
   </div>
 </div>
 </div>
+
+<!-- Info section -->
+
+<!--Add mobile code and details-->
+<div class="container">
+  <div class="info">
+    <div class="imageside"
+      <img src="information-main.jpg" alt="Man reading in park">
+      <h1>It doesn't hurt to keep practicing</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nisi corporis, accusantium at id expedita asperiores enim! Minima molestias autem nihil odio? Incidunt, totam distinctio. Reiciendis exercitationem pariatur fugiat</p>
+      <h6>Emanuael,Sr. Strategist at Hiring.com</h6>
+    </div>
+    <div class-"info-right">
+      <div class="orientation">
+        <div class="orientation-image">
+          <img src="resources/images/information-orientation.jpg" alt="Drone view of people walking">
+        </div>
+        <div class="date">
+          <h4>Orientation Date</h4>
+          <h5>Tue10/11 & Wed 10/12: 8am-3om</h5>
+          <a href="#">Read more</a>
+        </div>
+      <div class="campus">
+        <div class="info-campus">
+          <img src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
+        </div>
+        <div class="find-campus">
+          <h4>Our Campus</h4>
+          <h5>Find which campus is close by you</h5>
+          <a href="#">Read more</a>
+        </div>
+      <div class="guest">
+        <div class="guest-image">
+          <img src="resources/images/information-guest-lecture.jpg">
+        </div>
+        <div class="special-guest">
+          <h4>Special guest lecture</h4>
+          <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Start Learning Section -->
+
 
 
 
