--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <!--Add mobile code and details-->
 <div class="container">
   <div class="info">
-    <div class="imageside"
-      <img src="information-main.jpg" alt="Man reading in park">
+    <div class="image"
+      <img src="resources/images/information-main.jpg" alt="Man reading in park">
       <h1>It doesn't hurt to keep practicing</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nisi corporis, accusantium at id expedita asperiores enim! Minima molestias autem nihil odio? Incidunt, totam distinctio. Reiciendis exercitationem pariatur fugiat</p>
       <h6>Emanuael,Sr. Strategist at Hiring.com</h6>
@@ -86,7 +86,60 @@
       </div>
     </div>
 
-    <!-- Start Learning Section -->
+<!-- Start Learning Section -->
+
+<div class="gallery">
+  <h1>Start Learning</h1>
+  <div class="courses">
+    <div class="course">
+      <img src="resources/images/course-software.jpg" alt="Software engineering courses">
+      <div class="course-description">
+        <h4>Software Engineering</h4>
+        <span>COURSES</span>
+        <p>Web Development, Mobile Development, iOT, APIs</p>
+      </div>
+    </div>
+    <div class="course">
+      <img src="resources/images/course-computer-art.jpg" alt="Hand holding iphone">
+      <div class="course-description">
+        <h4>Computer Art</h4>
+        <span> COURSES</span>
+        <p>Imaging & Design, Web Design, Motion Graphics and Visual Effects, Computer Animation</p>
+      </div>
+    </div>
+    <div class="course">
+      <img src="resources/images/course-design.jpg" alt="man focusing vintage camera">
+      <div class="course-description">
+        <h4>Design</h4>
+        <span>COURSES</span>
+        <p>User Experience Design, User Research, Visual Design</p>
+      </div>
+    </div>
+    <div class="course">
+      <img src="resources/images/course-data.jpg" alt="laptop computer">
+      <div class="course-description">
+        <h4>Data</h4>
+        <span> COURSES</span>
+        <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+    </div>
+    <div class="course">
+      <img src="resoruces/images/course-business" alt="chess set">
+      <div class="course-description">
+        <h4>Business</h4>
+        <span>COURSES</span>
+        <p>Product Development, Business Development, Startup</p>
+      </div>
+    </div>
+    <div class="course">
+      <img src="resources/images/course-marketing" alt="man's hand using an Apple Watch">
+      <div class="course-description">
+        <h4>Marketing</h4>
+        <span>COURSES</span>
+        <p>Analytics, Content Marketing, Mobile Marketing</p>
+      </div>
+    </div>
+
 
 
 
