first draft html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <!-- Start Learning Section -->
 
-<div class="gallery">
+<div class="grid">
   <h1>Start Learning</h1>
   <div class="courses">
     <div class="course">
@@ -139,6 +139,47 @@
         <p>Analytics, Content Marketing, Mobile Marketing</p>
       </div>
     </div>
+
+<!-- Thesis Exhibit Section -->
+
+<div class="thesis">
+  <h1> Thesis Exhibit</h1>
+  <div class="exhibit">
+    <div class="video-side">
+      <video width="60%" height="auto" autoplay loop>
+        <source src="resources/videos/thesis.mp4" type="video/mp4">
+      </video>
+      <div class="video-info">
+        <h4>Reimagine Urban</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, assumenda mollitia. Ducimus asperiores aut nihil rerum aliquam perspiciatis nemo. Illo, assumenda mollitia.</p>
+      </div>
+    </div>
+    <div class="rightside">
+      <div class="fisma">
+        <img src="resources/images/thesis-fisma.jpg">
+        <h3>Fisma: Design and Prototype</h3>
+        <p>Designer showcase of new prototype product</p>
+      </div>
+      <div class="Now">
+        <img src="resources/images/thesis-now-and-then.jpg">
+        <h3>Now and then</h3>
+        <p>Research study about New York</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <span>&#169; Colmar Academy. All rights reserved</span>
+    <nav>
+      <ul>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+    </nav>
+  </footer>
+
+
 
 
 
