started css styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>ColmarAcademy</title>
-    <link href="resources/css/reset.css" type="text.css" rel="stylesheet">
-    <link href="resources/css/style.css" type="text.css" rel="stylesheet">
+    <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
   </head>
 
   <body>
@@ -13,8 +14,8 @@
 <header>
   <div class="container">
     <div class="logo">
-      <img src="./resources.images.ic-logo.svg" alt="Colmar Logo">
-      <h4><em>COLMAR</em>ACADEMY</h4>
+      <img src="resources.images.ic-logo.svg" alt="Colmar Logo">
+      <h4>COLMARACADEMY</h4>
     </div>
     <nav class="desktop">
       <ul>
@@ -36,12 +37,12 @@
       <img src="resources/images/banner.jpg" alt="Students studying together">
     </div>
 
-  <div class="rightside">
+  <div class="right-text">
     <h1>Learn something new everyday</h1>
     <h3>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</h3>
     <span class="button"><a href="#">Start Here</a></span>
   </div>
-</div>
+ </div>
 </div>
 
 <!-- Info section -->
@@ -65,6 +66,7 @@
           <h5>Tue10/11 & Wed 10/12: 8am-3om</h5>
           <a href="#">Read more</a>
         </div>
+      </div>
       <div class="campus">
         <div class="info-campus">
           <img src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
@@ -74,6 +76,7 @@
           <h5>Find which campus is close by you</h5>
           <a href="#">Read more</a>
         </div>
+      </div>
       <div class="guest">
         <div class="guest-image">
           <img src="resources/images/information-guest-lecture.jpg">
@@ -85,10 +88,11 @@
         </div>
       </div>
     </div>
+  </div>
 
 <!-- Start Learning Section -->
-
-<div class="grid">
+<div class="container">
+<div id="grid">
   <h1>Start Learning</h1>
   <div class="courses">
     <div class="course">
@@ -139,9 +143,10 @@
         <p>Analytics, Content Marketing, Mobile Marketing</p>
       </div>
     </div>
-
+</div>
+</div>
 <!-- Thesis Exhibit Section -->
-
+<div class=container">
 <div class="thesis">
   <h1> Thesis Exhibit</h1>
   <div class="exhibit">
@@ -167,6 +172,8 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 
   <!-- Footer -->
   <footer>
@@ -178,13 +185,6 @@
       </ul>
     </nav>
   </footer>
-
-
-
-
-
-
-
 
 
   </body>
