improved page styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <div class="container">
     <div class="logo">
       <img src="resources.images.ic-logo.svg" alt="Colmar Logo">
-      <h4>COLMARACADEMY</h4>
+      <h1>COLMAR
+      <span>ACADEMY</span>
+      </h1>
     </div>
     <nav class="desktop">
       <ul>
@@ -48,17 +50,16 @@
 <!-- Info section -->
 
 <!--Add mobile code and details-->
-<div class="container">
+
   <div class="info">
-    <div class="image"
+    <div class="image">
       <img src="resources/images/information-main.jpg" alt="Man reading in park">
       <h1>It doesn't hurt to keep practicing</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nisi corporis, accusantium at id expedita asperiores enim! Minima molestias autem nihil odio? Incidunt, totam distinctio. Reiciendis exercitationem pariatur fugiat</p>
       <h6>Emanuael,Sr. Strategist at Hiring.com</h6>
     </div>
-    <div class-"info-right">
-      <div class="orientation">
-        <div class="orientation-image">
+      <div class="info-right">
+        <div class="orientation">
           <img src="resources/images/information-orientation.jpg" alt="Drone view of people walking">
         </div>
         <div class="date">
@@ -66,7 +67,6 @@
           <h5>Tue10/11 & Wed 10/12: 8am-3om</h5>
           <a href="#">Read more</a>
         </div>
-      </div>
       <div class="campus">
         <div class="info-campus">
           <img src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
@@ -91,11 +91,12 @@
   </div>
 
 <!-- Start Learning Section -->
-<div class="container">
+
 <div id="grid">
+  <div class="container">
   <h1>Start Learning</h1>
   <div class="courses">
-    <div class="course">
+    <div class="item1">
       <img src="resources/images/course-software.jpg" alt="Software engineering courses">
       <div class="course-description">
         <h4>Software Engineering</h4>
@@ -103,7 +104,7 @@
         <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
     </div>
-    <div class="course">
+    <div class="item2">
       <img src="resources/images/course-computer-art.jpg" alt="Hand holding iphone">
       <div class="course-description">
         <h4>Computer Art</h4>
@@ -111,7 +112,7 @@
         <p>Imaging & Design, Web Design, Motion Graphics and Visual Effects, Computer Animation</p>
       </div>
     </div>
-    <div class="course">
+    <div class="item3">
       <img src="resources/images/course-design.jpg" alt="man focusing vintage camera">
       <div class="course-description">
         <h4>Design</h4>
@@ -119,7 +120,7 @@
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
     </div>
-    <div class="course">
+    <div class="item4">
       <img src="resources/images/course-data.jpg" alt="laptop computer">
       <div class="course-description">
         <h4>Data</h4>
@@ -127,7 +128,7 @@
         <p>Data Science, Big Data, SQL, Data Visualization</p>
       </div>
     </div>
-    <div class="course">
+    <div class="item5">
       <img src="resoruces/images/course-business" alt="chess set">
       <div class="course-description">
         <h4>Business</h4>
@@ -135,7 +136,7 @@
         <p>Product Development, Business Development, Startup</p>
       </div>
     </div>
-    <div class="course">
+    <div class="item6">
       <img src="resources/images/course-marketing" alt="man's hand using an Apple Watch">
       <div class="course-description">
         <h4>Marketing</h4>
@@ -145,17 +146,19 @@
     </div>
 </div>
 </div>
+
 <!-- Thesis Exhibit Section -->
-<div class=container">
-<div class="thesis">
-  <h1> Thesis Exhibit</h1>
+
+<div class="container">
+  <div id="thesis">
+    <h1> Thesis Exhibit</h1>
   <div class="exhibit">
     <div class="video-side">
       <video width="60%" height="auto" autoplay loop>
         <source src="resources/videos/thesis.mp4" type="video/mp4">
       </video>
       <div class="video-info">
-        <h4>Reimagine Urban</h4>
+        <h3>Reimagine Urban</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, assumenda mollitia. Ducimus asperiores aut nihil rerum aliquam perspiciatis nemo. Illo, assumenda mollitia.</p>
       </div>
     </div>
