--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
   <div class="right-text">
-    <h1>Learn something new everyday</h1>
+    <h1>Learn something <br/> new everyday</h1>
     <h3>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</h3>
     <span class="button"><a href="#">Start Here</a></span>
   </div>
@@ -96,7 +96,7 @@
   <div class="container">
   <h1>Start Learning</h1>
   <div class="courses">
-    <div class="item1">
+    <div class="course">
       <img src="resources/images/course-software.jpg" alt="Software engineering courses">
       <div class="course-description">
         <h4>Software Engineering</h4>
@@ -104,7 +104,7 @@
         <p>Web Development, Mobile Development, iOT, APIs</p>
       </div>
     </div>
-    <div class="item2">
+    <div class="course">
       <img src="resources/images/course-computer-art.jpg" alt="Hand holding iphone">
       <div class="course-description">
         <h4>Computer Art</h4>
@@ -112,7 +112,7 @@
         <p>Imaging & Design, Web Design, Motion Graphics and Visual Effects, Computer Animation</p>
       </div>
     </div>
-    <div class="item3">
+    <div class="course">
       <img src="resources/images/course-design.jpg" alt="man focusing vintage camera">
       <div class="course-description">
         <h4>Design</h4>
@@ -120,7 +120,7 @@
         <p>User Experience Design, User Research, Visual Design</p>
       </div>
     </div>
-    <div class="item4">
+    <div class="course">
       <img src="resources/images/course-data.jpg" alt="laptop computer">
       <div class="course-description">
         <h4>Data</h4>
@@ -128,7 +128,7 @@
         <p>Data Science, Big Data, SQL, Data Visualization</p>
       </div>
     </div>
-    <div class="item5">
+    <div class="course">
       <img src="resoruces/images/course-business" alt="chess set">
       <div class="course-description">
         <h4>Business</h4>
@@ -136,7 +136,7 @@
         <p>Product Development, Business Development, Startup</p>
       </div>
     </div>
-    <div class="item6">
+    <div class="course">
       <img src="resources/images/course-marketing" alt="man's hand using an Apple Watch">
       <div class="course-description">
         <h4>Marketing</h4>
