--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="info-campus">
           <img src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
         </div>
-        <div class="find-campus">
+        <div class="our-campus">
           <h4>Our Campus</h4>
           <h5>Find which campus is close by you</h5>
           <a href="#">Read more</a>
@@ -87,7 +87,6 @@
       <div class="guest">
         <div class="guest-image">
           <img src="resources/images/information-guest-lecture.jpg">
-        </div>
         <div class="special-guest">
           <h4>Special guest lecture</h4>
           <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
@@ -96,6 +95,7 @@
       </div>
     </div>
   </div>
+</div>
 
 <!-- Start Learning Section -->
 
@@ -159,8 +159,7 @@
 <div class="thesis-container">
   <div id="thesis">
     <h1> Thesis Exhibit</h1>
-  <div class="exhibit">
-    <div class="video-side">
+    <div class="video-container">
       <video width="60%" height="auto" autoplay loop>
         <source src="resources/videos/thesis.mp4" type="video/mp4">
       </video>
@@ -180,7 +179,6 @@
         <h3>Now and then</h3>
         <p>Research study about New York</p>
       </div>
-    </div>
   </div>
 </div>
 
