--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </ul>
     </nav>
 
+ <!-- Header Mobile Nav-->
     <nav class="mobilenav">
            <img src="./resources/images/ic-logo.svg" alt="logo"/>
            <a href="#"><img src="resources/images/ic-on-campus.svg" alt="campus" /></a>
@@ -67,35 +68,40 @@
     </div>
       <div class="info-right">
         <div class="orientation">
-          <img src="resources/images/information-orientation.jpg" alt="Drone view of people walking">
+          <img class="desktop-image" src="resources/images/information-orientation.jpg" alt="Drone view of people walking">
+          <img class="mobile-image" src="resources/images/information-orientation-mobile.jpg">
         </div>
-        <div class="date">
+          <div class="date">
           <h4>Orientation Date</h4>
           <h5>Tue10/11 & Wed 10/12: 8am-3om</h5>
           <a href="#">Read more</a>
-        </div>
+          </div>
       <div class="campus">
         <div class="info-campus">
-          <img src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
+          <img class="desktop-image" src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
+          <img class="mobile-image" src="resources/images/information-campus-mobile.jpg">
         </div>
-        <div class="our-campus">
+          <div class="our-campus">
           <h4>Our Campus</h4>
           <h5>Find which campus is close by you</h5>
           <a href="#">Read more</a>
+          </div>
         </div>
-      </div>
       <div class="guest">
         <div class="guest-image">
-          <img src="resources/images/information-guest-lecture.jpg">
-        <div class="special-guest">
-          <h4>Special guest lecture</h4>
-          <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
-          <a href="#">Read more</a>
+          <img class="desktop-image" src="resources/images/information-guest-lecture.jpg">
+          <img class="mobile-image" src="resources/images/information-guest-lecture-mobile.jpg">
+          <div class="special-guest">
+            <h4>Special guest lecture</h4>
+            <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+            <a href="#">Read more</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+
 
 <!-- Start Learning Section -->
 
@@ -151,8 +157,23 @@
         <p>Analytics, Content Marketing, Mobile Marketing</p>
       </div>
     </div>
+
+ <!-- Start Mobile courses -->
+    <section class="mobile-courses">
+          <div class="mobile container">
+              <h3><a href="#">Software Engineering</a></h3>
+              <h3><a href="#">Computer Art</a></h3>
+              <h3><a href="#">Design</a></h3>
+              <h3><a href="#">Data</a></h3>
+              <h3><a href="#">Business</a></h3>
+              <h3><a href="#">Marketing</a></h3>
+          </div>
+    </section>
+        <!-- end mobile courses -->
+  </div>
 </div>
-</div>
+
+<!-- End start learning section-->
 
 <!-- Thesis Exhibit Section -->
 
