--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="banner-right">
       <div class="right-text">
         <h1>Learn something <br/> new everyday</h1>
-        <h3>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</h3>
+        <h3>Lorem ipsum dolor sit amet, <br/> consectetur adispiscing elit.</h3>
         <span class="button"><a href="#">Start Here</a></span>
       </div>
     </div>
@@ -62,42 +62,44 @@
   <div class="info-section">
     <div class="image-container">
       <img src="resources/images/information-main.jpg" alt="Man reading in park">
+      <div class="info-text">
       <h1>It doesn't hurt to keep practicing</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nisi corporis, accusantium at id expedita asperiores enim! Minima molestias autem nihil odio? Incidunt, totam distinctio. Reiciendis exercitationem pariatur fugiat</p>
       <h6>Emanuael,Sr. Strategist at Hiring.com</h6>
     </div>
-      <div class="info-right">
+    </div>
+    <div class="info-right">
         <div class="orientation">
           <img class="desktop-image" src="resources/images/information-orientation.jpg" alt="Drone view of people walking">
           <img class="mobile-image" src="resources/images/information-orientation-mobile.jpg">
-        </div>
           <div class="date">
-          <h4>Orientation Date</h4>
-          <h5>Tue10/11 & Wed 10/12: 8am-3om</h5>
-          <a href="#">Read more</a>
-          </div>
-      <div class="campus">
-        <div class="info-campus">
-          <img class="desktop-image" src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
-          <img class="mobile-image" src="resources/images/information-campus-mobile.jpg">
-        </div>
-          <div class="our-campus">
-          <h4>Our Campus</h4>
-          <h5>Find which campus is close by you</h5>
-          <a href="#">Read more</a>
-          </div>
-        </div>
-      <div class="guest">
-        <div class="guest-image">
-          <img class="desktop-image" src="resources/images/information-guest-lecture.jpg">
-          <img class="mobile-image" src="resources/images/information-guest-lecture-mobile.jpg">
-          <div class="special-guest">
-            <h4>Special guest lecture</h4>
-            <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+            <h4>Orientation Date</h4>
+            <h5>Tue10/11 & Wed 10/12: 8am-3om</h5>
             <a href="#">Read more</a>
           </div>
         </div>
-      </div>
+        <div class="campus">
+            <div class="info-campus">
+              <img class="desktop-image" src="resources/images/information-campus.jpg" alt"map on coffeeshop wall">
+              <img class="mobile-image" src="resources/images/information-campus-mobile.jpg">
+            </div>
+            <div class="our-campus">
+              <h4>Our Campus</h4>
+              <h5>Find which campus is close by you</h5>
+              <a href="#">Read more</a>
+            </div>
+        </div>
+        <div class="guest">
+              <div class="guest-image">
+                <img class="desktop-image" src="resources/images/information-guest-lecture.jpg">
+                <img class="mobile-image" src="resources/images/information-guest-lecture-mobile.jpg">
+                <div class="special-guest">
+                  <h4>Special guest lecture</h4>
+                  <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+                  <a href="#">Read more</a>
+                </div>
+              </div>
+        </div>
     </div>
   </div>
 
