desktop version working

--- a/index.html
+++ b/index.html
@@ -183,22 +183,22 @@
 
 <!-- Thesis Exhibit Section -->
 
+<div class="thesis-title">
+  <h1> Thesis Exhibit</h1>
+</div>
 <div class="thesis-section">
-  <div class="thesis-title">
-    <h1> Thesis Exhibit</h1>
-  </div>
      <div class="thesis-left">
-       <video width=60% height="auto" autoplay loop>
+       <video autoplay loop>
          <source src="resources/videos/thesis.mp4" type="video/mp4">
        </video>
-     </div>
       <div class="video-info">
         <h3>Reimagine Urban</h3>
         <p>Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/> nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. <br/> Eiam eget magna laoreet, effictur dolor consequat, tristique ligula. </p>
       </div>
+    </div>
     <div class="thesis-right">
-      <div class="thesis-container">
-        <div class="thesis-image thesis-top">
+      <div class="thesis-container thesis-top">
+        <div class="thesis-image">
         <img src="resources/images/thesis-fisma.jpg">
         </div>
       <div class="thesis-text">
@@ -209,11 +209,11 @@
     <div class="thesis-container">
         <div class="thesis-image">
           <img src="resources/images/thesis-now-and-then.jpg">
+        </div>
         <div class="thesis-text">
          <h3>Now and then</h3>
           <p>Research study about New York</p>
         </div>
-       </div>
      </div>
   </div>
 </div>
