Mobile working - yay

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
       </ul>
   </nav>
   <!-- Header Mobile Nav -->
-    <nav class="mobile mobile-links">
+    <nav class="mobile">
+      <div class="mobile-links">
       <a href="#"><img src="resources/images/ic-on-campus.svg" alt="campus" /></a>
       <a href="#"><img src="resources/images/ic-online.svg" alt="online" /></a>
       <a href="#"><img src="resources/images/ic-login.svg" alt="login" /></a>
+      </div>
     </nav>
 </div>
 </header>
@@ -45,14 +47,14 @@
 
 <div class="learn-container" role="banner">
   <div class="banner">
-    <div class="banner-image">
+    <div class="banner-left">
       <img src="resources/images/banner.jpg" alt="Students studying together">
     </div>
     <div class="banner-right">
       <div class="right-text">
         <h1>Learn something <br/> new everyday</h1>
         <h3>Lorem ipsum dolor sit amet, <br/> consectetur adispiscing elit.</h3>
-        <span class="button"><a href="#">Start Here</a></span>
+        <div class="button"><a href="#">Start Here</a></div>
       </div>
     </div>
   </div>
@@ -173,11 +175,21 @@
       <div class="mobile-course">
         <h3><a href="#">Software Engineering</a></h3>
       </div>
+      <div class="mobile-course">
         <h3><a href="#">Computer Art</a></h3>
+      </div>
+      <div class="mobile-course">
         <h3><a href="#">Design</a></h3>
+      </div>
+      <div class="mobile-course">
         <h3><a href="#">Data</a></h3>
+      </div>
+      <div class="mobile-course">
         <h3><a href="#">Business</a></h3>
+      </div>
+      <div class="mobile-course">
         <h3><a href="#">Marketing</a></h3>
+      </div>
     </div>
   </div>
 </div>
